--- a/index.html
+++ b/index.html
@@ -8,19 +8,13 @@
     <body>
         <h1>Welcome, to my recipe page!</h1>
         <p>
-            Hello, this is where I shall be keeping up with recipes that I use personally. 
-        </p>
-        <p>
+            Hello, this is where I shall be keeping up with recipes that I use personally.<br>
             Each recipe would start out with the ingredients you need, then would move on to the actual cooking part.
-        </p>
-        <p>
-            Disclaimer: I found most of these recipes online and would be referencing where I found them at the bottom.
-            Also I am not very specific about the amount put in, because I usually eyeball the amount I put in.
         </p>
         <h2>Recipes</h2>
         <ul>
             <li>
-                Salmon with rice
+                <a href="salmon-with-rice.html" target="_self">Salmon with rice</a>
             </li>
             <li>
                 Vegetable Soup
