Moving webpages to a folder
- Created recipes folder
- Moved salmon-with-rice.html into recipes folder
- Changed where the ref for the homepage and other pages

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h2>Recipes</h2>
         <ul>
             <li>
-                <a href="salmon-with-rice.html" target="_self">Salmon with rice</a>
+                <a href="recipes/salmon-with-rice.html" target="_self">Salmon with rice</a>
             </li>
             <li>
                 Vegetable Soup
