--- a/recipes/salmon-with-rice.html
+++ b/recipes/salmon-with-rice.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <h5><a href = "index.html" target="_self">Homepage</a></h5>
+        <h5><a href = "../index.html" target="_self">Homepage</a></h5>
         <h1>Salmon with rice</h1>
         <p>
             This is my recipe for how I make my own salmon and rice.
