Added images to the following pages
- Added an image to several pages
- Added a link to the new page from the homepage

--- a/recipes/salmon-with-rice.html
+++ b/recipes/salmon-with-rice.html
@@ -53,6 +53,7 @@
                 </li>
             </ol>
 
+        <img src="../img/finished_Salmon.JPG" alt="Image of the cooked salmon with rice" height="300" width="300">
     </body>
 
 </html>
