--- a/recipes/vegetable-soup.html
+++ b/recipes/vegetable-soup.html
@@ -57,6 +57,7 @@
             </ol>
         </p>
 
+        <img src="../img/vegetable_Soup.jpg" alt="An image of vegetable soup" height="300" width="300">
     </body>
 
 
