--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <a href="recipes/salmon-with-rice.html" target="_self">Salmon with rice</a>
             </li>
             <li>
-                Vegetable Soup
+                <a href="recipes/vegetable-soup.html" target="_self">Vegetable Soup</a>
             </li>
             <li>
                 Mac and Cheese
