Created a new page on the website.
- Added an image to the website
- Added the new page to the website
- Added a new link to the homepage
- Modified the list on Vegetable-soup.html to add more spaces
- Modified the list of spices on salmon-with-rice.html for unnecessary list item.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <a href="recipes/vegetable-soup.html" target="_self">Vegetable Soup</a>
             </li>
             <li>
-                Mac and Cheese
+                <a href="recipes/mac-and-cheese.html">Mac and Cheese</a>
             </li>
 
         </ul>
