--- a/recipes/salmon-with-rice.html
+++ b/recipes/salmon-with-rice.html
@@ -20,14 +20,14 @@
             <li>Rice</li>
             <li>Salmon</li>
             <li>Cooking Oil</li>
-            <li>Spices
+            <li>Spices</li>
                 <ul>
                     <li>Smoked Paprika</li>
                     <li>Black Pepper</li>
                     <li>Garlic Powder</li>
                     <li>Onion Powder</li>
                 </ul>
-            </li>
+            
         </ul>
         <p>
             <h3>Cooking Section</h3>
