--- a/recipes/vegetable-soup.html
+++ b/recipes/vegetable-soup.html
@@ -9,7 +9,8 @@
         <h5><a href="../index.html" target="_self">Homepage</a></h5>
         <h1>Vegetable Soup</h1>
         <p>
-
+            This is a simple vegetable soup that I love making. <br>
+            It is a healthy tasty option to have.
         </p>
         <h3>Ingredients</h3>
         <ul>
@@ -35,29 +36,39 @@
             <h3>Cooking Section</h3>
         </p>
 
-        <p>
-            <ol>
-                <li>
+        
+        <ol>
+            <li>
+                <p>
                     I like to start off with chopping my Carrots, Celery, and Onions. Then putting them all <br>
                     into a pot to start.
-                </li>
-                <li>
+                </p>
+            </li>
+            <li>
+                <p>
                     When the ingredients look soft, I would add in the cut Garlic and let the garlic start to cook.
-                </li>
-                <li>
+                </p>
+            </li>
+            <li>
+                <p>
                     Afterwards I would add in the vegetable broth to the soup and start cutting up my potatoes into small pieces.<br>
                     Adding them after they have all been cut up.
-                </li>
-                <li>
+                </p>
+            </li>
+            <li>
+                <p>
                     Next I would add in all the spices into the vegetable soup. and let it sit until the potatoes become soft.
-                </li>
-                <li>
+                </p>
+            </li>
+            <li>
+                <p>
                     Finally I would add in the parsley, corn, and peas into the vegetable soup and let it simmer for a few minutes.
-                </li>
-            </ol>
-        </p>
+                </p>
+            </li>
+        </ol>
+        
 
-        <img src="../img/vegetable_Soup.jpg" alt="An image of vegetable soup" height="300" width="300">
+        <img src="../img/vegetable_Soup.jpg" alt="An image of vegetable soup found online" height="300" width="300">
     </body>
 
 
